# blog.neil.mayhew.name

./: .gitignore  Notes.md  about.md  blog-neil-mayhew-name.cabal  contact.md  default.nix  flake.nix  fourmolu.yaml  shell.nix  site.hs  site.nix
.github/workflows/: hakyll.yml
css/: style.css  syntax.css
pages/: 02-contact.md
posts/: 2008-06-04-hello-world.md  2008-06-14-lost-and-found.md  2015-12-09-harder-than-you-think.md  2018-05-10-list-deletion.md  2023-11-06-First-Haskell-Job.md  2024-05-17-Vendor-Kernels.md  2024-07-22-Crowdstrike-crash.md  2025-09-20-not-an-exception.md
templates/: archive.html  aside.html  default.html
